--- a/ctrack/text/view_donors_comparison.html
+++ b/ctrack/text/view_donors_comparison.html
@@ -19,6 +19,10 @@
     width: 960px;
 }
 
+.clear {
+	clear: both;
+}
+
 .highcharts-container {
     box-shadow: 4px 4px 10px #333;   
 }
@@ -52,5 +56,6 @@
 	<div class="donor_iati_five graph_five_block"></div>
 	<div class="donor_crs_five graph_five_block" style="margin: 0 10px;"></div>
 	<div class="donor_amp_five graph_five_block"></div>
+	<div class="clear"></div>
 </div>
 {graph_top_five_value}
